baseparse outputs bogus offset_end values
The offset_end values in buffers emerging from h265parse are incorrect, and seem to be related to the 64KB buffers baseparse pulls. The results changed since e906197c but was incorrect before that too.
e.g.
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (173099 bytes, dts: 0:00:00.000000000, pts: none, duration: 0:00:00.033333333, offset: 0, offset_end: 196608, flags: 00000640 discont marker header , meta: none) 0x7f33580186c0
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (61074 bytes, dts: 0:00:00.033333333, pts: none, duration: 0:00:00.033333333, offset: 173099, offset_end: 267135, flags: 00002200 marker delta-unit , meta: none) 0x7f3358018b40
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (11477 bytes, dts: 0:00:00.066666666, pts: none, duration: 0:00:00.033333333, offset: 234173, offset_end: -1, flags: 00002200 marker delta-unit , meta: none) 0x7f33580186c0
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (11759 bytes, dts: 0:00:00.099999999, pts: none, duration: 0:00:00.033333333, offset: 245650, offset_end: -1, flags: 00002200 marker delta-unit , meta: none) 0x7f33580185a0
used to be
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (173099 bytes, dts: 0:00:00.000000000, pts: none, duration: 0:00:00.033333333, offset: 0, offset_end: 196608, flags: 00000640 discont marker header , meta: none) 0x7fc21c0186c0
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (61074 bytes, dts: 0:00:00.033333333, pts: none, duration: 0:00:00.033333333, offset: 173099, offset_end: 238635, flags: 00002200 marker delta-unit , meta: none) 0x7fc21c018480
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (11477 bytes, dts: 0:00:00.066666666, pts: none, duration: 0:00:00.033333333, offset: 234173, offset_end: 299709, flags: 00002200 marker delta-unit , meta: none) 0x7fc21c0186c0
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (11759 bytes, dts: 0:00:00.099999999, pts: none, duration: 0:00:00.033333333, offset: 245650, offset_end: 311186, flags: 00002200 marker delta-unit , meta: none) 0x7fc21c018480
/GstPipeline:pipeline0/GstFakeSink:fakesink0: last-message = chain ******* (fakesink0:sink) (61214 bytes, dts: 0:00:00.133333332, pts: none, duration: 0:00:00.033333333, offset: 257409, offset_end: 322945, flags: 00002200 marker delta-unit , meta: none) 0x7fc21c0186c0